<resources>
    <string name="app_name">CThat App 1</string>
    <string name="start_button">Start</string>
    <string name="gai_section_1_title">REQUEST FROM: (Your Details)</string>
    <string name="agent_name_first">First Name:</string>
    <string name="agent_name_last">Last Name:</string>
    <string name="agent_email">Email:</string>
    <string name="agent_license_number">License Number:</string>

    <string name="agent_brokerage_title">Brokerage Information:</string>
    <string name="agent_brokerage_name">Brokerages Printed Name:</string>
    <string name="agent_brokerage_license_number">Brokers License Number:</string>
    <string name="agent_brokerage_button">NEXT</string>

    <string name="due_by_title">DUE BY:</string>
    <string name="request_due_date">Date:</string>
    <string name="request_due_time">Time:</string>
    <string name="request_due_button">NEXT</string>

    <string name="parties_title">Parties:</string>
    <string name="parties_title_2">Parties: Buyer Two</string>
    <string name="number_of_parties">Number of Buyers:</string>
    <string name="one_buyer">1</string>
    <string name="two_buyers">2</string>
    <string name="buyer_one_first_name">First Name:</string>
    <string name="buyer_one_last_name">Last Name:</string>
    <string name="buyer_one_email">Email:</string>
    <string name="buyer_one_phone">Phone:</string>
    <string name="buyer_add_buyer">Add Buyer</string>
    <string name="buyer_one_button">NEXT</string>

    <string name="buyer_two_first_name">First Name:</string>
    <string name="buyer_two_last_name">Last Name:</string>
    <string name="buyer_two_email">Email:</string>
    <string name="buyer_two_phone">Phone:</string>
    <string name="buyer_two_button">NEXT</string>
    <string name="agent_related_to_buyer">Are you related to your client?:</string>

    <string name="buyer_address_title">Buyer\'s Current Address</string>
    <string name="buyer_address_street_address">Street Address:</string>
    <string name="buyer_address_city">City:</string>
    <string name="buyer_address_state">State:</string>
    <string name="buyer_address_zip">Zip Code:</string>
    <string name="buyer_next_button">NEXT</string>

    <string name="agent_buyer_relationship_exists">Are you related to your client?</string>
    <string name="agent_relationship_to_buyer">Relationship to Client:</string>
    <string name="agent_client_relationship_no">No</string>
    <string name="agent_client_relationship_yes">Yes</string>
    <string name="agent_client_relationship_button">NEXT</string>

    <string name="define_market_area">Define Market Area:</string>
    <string name="county_collin">Collin</string>
    <string name="county_dallas">Dallas</string>
    <string name="county_tarrant">Tarrant</string>
    <string name="county_rockwall">Rockwall</string>
    <string name="county_denton">Denton</string>
    <string name="county_other">Other</string>
    <string name="county_next_button">NEXT</string>

    <string name="term_length_title">Define Term Length</string>
    <string name="term_length_start">Start Date</string>
    <string name="term_length_end">End Date</string>
    <string name="term_length_button">NEXT</string>

    <string name="representations_title">Representations</string>
    <string name="representations_explanation">Name any employer, relocation company, or other entity that will provide benefits to Client when acquiring property in the market area:</string>
    <string name="representations_next">NEXT</string>

    <string name="intermediary_title">Intermediary Status</string>
    <string name="intermediary_status_yes">Intermediary Status</string>
    <string name="intermediary_status_no">No Intermediary Status</string>
    <string name="intermediary_next_button">NEXT</string>

    <string name="sale_fees_title">Sale Fees</string>
    <string name="sale_fees_sale">Percentage Broker will receive from sale:</string>
    <string name="sale_fees_button">NEXT</string>

    <string name="lease_fees_title">Lease Fees</string>
    <string name="lease_fees__radio_label">If Client agrees to lease property in the market area a fee equal to:</string>
    <string name="lease_fees_lease_one_rent">% of one months rent</string>
    <string name="lease_fees_all_rents">% of all rents to be paid over the term of the lease.</string>
    <string name="lease_agreed_percentage">Agreed Percentage:</string>
    <string name="lease_button">NEXT</string>

    <string name="construction_fees_title">Construction Fees</string>
    <string name="construction_fees">If Client uses Broker’s services to procure or negotiate the construction of improvements to property that Client owns or may acquire, Client ensures that Broker will receive from Client or the contractor(s) at the time the construction is substantially complete a fee equal to:</string>

    <string name="service_provider_fees_title">Service Provider Fees</string>
    <string name="service_provider_fees">If Broker refers Client or any party to a transaction contemplated by this agreement to a service provider (for example, mover, cable company, telecommunications provider, utility, or contractor) Broker may receive a fee from the service provider for the referral</string>
    <string name="service_providers_next">NEXT</string>

    <string name="other_fees_title">Other Broker Fees</string>
    <string name="other_fees">Other fees broker is entitled to from this transaction:</string>
    <string name="other_fees_next_button">NEXT</string>


    <string name="protection_period">Protection Period</string>
    <string name="protection_period_length">Protection Period Length:</string>
    <string name="protection_period_next_button">NEXT</string>

    <string name="broker_county">County: Amounts payable to Broker are to be paid in cash in: </string>

    <string name="addenda_checklist_title">Addenda and Other Documents</string>
    <string name="addenda_checklist">Check all that apply:</string>
    <string name="addenda_checklist_next_button">NEXT</string>
    <string name="addenda_iabs">Information About Brokerage Services</string>
    <string name="addenda_mold">Protecting Your Home From Mold</string>
    <string name="addenda_insurance">Information Concerning Property Insurance</string>
    <string name="addenda_general">General Information and Notice to a Buyer</string>
    <string name="addenda_lead">Protect Your Family From Lead In Your Home</string>
    <string name="addenda_hazard">Information About Special Flood Hazard Areas</string>
    <string name="addenda_inspection">For Your Protection Get A Home Inspection</string>
    <string name="addenda_other">Other:</string>
    <string name="addenda2_checklist_next_button">NEXT</string>

    <string name="special_provisions_title">Special Provisions</string>
    <string name="special_provisions">Special Provisions:</string>
    <string name="special_provisions_next_button">NEXT</string>


    <string name="special_instructions">Special Instructions, if any:</string>
    <string name="special_instructions_explanation">Enter special instructions to your Transaction Coordinator:</string>
    <string name="special_instructions_next_button">NEXT</string>

</resources>