<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Addenda2">

    <TextView
        android:id="@+id/addenda2Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="1dp"
        android:text="@string/addenda_checklist_title"
        app:layout_constraintEnd_toEndOf="@+id/addendaLead"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addenda2NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="51dp"
        android:onClick="nextButton"
        android:text="@string/addenda2_checklist_next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addendaOtherInput" />

    <TextView
        android:id="@+id/addenda2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="21dp"
        android:text="@string/addenda_checklist"
        app:layout_constraintStart_toStartOf="@+id/addenda2Title"
        app:layout_constraintTop_toBottomOf="@+id/addenda2Title" />

    <CheckBox
        android:id="@+id/addendaLead"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_marginTop="37dp"
        android:text="@string/addenda_lead"
        app:layout_constraintStart_toStartOf="@+id/addendaHazard"
        app:layout_constraintTop_toBottomOf="@+id/addenda2Label" />

    <CheckBox
        android:id="@+id/addendaHazard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="29dp"
        android:text="@string/addenda_hazard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addendaLead" />

    <CheckBox
        android:id="@+id/addendaInspection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="22dp"
        android:text="@string/addenda_inspection"
        app:layout_constraintStart_toStartOf="@+id/addendaHazard"
        app:layout_constraintTop_toBottomOf="@+id/addendaHazard" />

    <TextView
        android:id="@+id/addendaOtherLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="11dp"
        android:text="@string/addenda_other"
        app:layout_constraintEnd_toStartOf="@+id/addendaOtherInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addendaInspection" />

    <EditText
        android:id="@+id/addendaOtherInput"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="55dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addendaOtherLabel"
        app:layout_constraintTop_toBottomOf="@+id/addendaInspection" />
</androidx.constraintlayout.widget.ConstraintLayout>