<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaseFees">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="143dp"
        android:layout_marginBottom="45dp"
        android:text="@string/lease_fees_title"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="46dp"
        android:text="@string/lease_fees__radio_label"
        app:layout_constraintBottom_toTopOf="@+id/radioButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="183dp"
        android:layout_height="0dp"
        android:layout_marginBottom="41dp"
        android:text="@string/lease_fees_lease_one_rent"
        app:layout_constraintBottom_toTopOf="@+id/radioButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:onClick="getConstructionFees"
        android:text="@string/lease_button"
        app:layout_constraintEnd_toEndOf="@+id/radioButton3"
        app:layout_constraintTop_toBottomOf="@+id/radioButton3" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="246dp"
        android:layout_height="0dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="41dp"
        android:text="@string/lease_fees_all_rents"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

</androidx.constraintlayout.widget.ConstraintLayout>