<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CollectBuyerInfo">

    <EditText
        android:id="@+id/buyerOneNameFirst"
        android:layout_width="209dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/buyerOneNameFirstLabel"
        app:layout_constraintTop_toTopOf="@+id/buyerOneNameFirstLabel" />

    <RadioButton
        android:id="@+id/partiesNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:onClick="collectAddress"
        android:text="@string/buyer_next_button"
        app:layout_constraintStart_toStartOf="@+id/addBuyer"
        app:layout_constraintTop_toBottomOf="@+id/addBuyer" />

    <TextView
        android:id="@+id/buyerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/parties_title"
        app:layout_constraintBottom_toTopOf="@+id/buyerOneNameFirst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/buyerOneEmail"
        android:layout_width="207dp"
        android:layout_height="54dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/buyerOnePhone"
        app:layout_constraintTop_toBottomOf="@+id/buyerOnePhone" />

    <TextView
        android:id="@+id/buyerOnePhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/buyer_one_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buyerOnePhone" />

    <TextView
        android:id="@+id/buyerOneEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/buyer_one_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buyerOneEmail" />

    <TextView
        android:id="@+id/buyerOneNameFirstLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="153dp"
        android:text="@string/buyer_one_first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/addBuyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:onClick="twoBuyers"
        android:text="@string/buyer_add_buyer"
        app:layout_constraintStart_toStartOf="@+id/buyerOneEmail"
        app:layout_constraintTop_toBottomOf="@+id/buyerOneEmail" />

    <EditText
        android:id="@+id/buyerOnePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/buyerOneNameLast"
        app:layout_constraintTop_toBottomOf="@+id/buyerOneNameLast" />

    <EditText
        android:id="@+id/buyerOneNameLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/buyerOneNameLastLabel"
        app:layout_constraintTop_toTopOf="@+id/buyerOneNameLastLabel" />

    <TextView
        android:id="@+id/buyerOneNameLastLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:text="@string/buyer_one_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyerOneNameFirst" />

</androidx.constraintlayout.widget.ConstraintLayout>