<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CollectAgentInfo">

    <EditText
        android:id="@+id/agentFirstName"
        android:layout_width="352dp"
        android:layout_height="75dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="109dp"
        android:layout_marginBottom="363dp"
        android:ems="10"
        android:hint="@string/agent_name_first"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/action2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/agentEmail"
        android:layout_width="353dp"
        android:layout_height="76dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/agent_email"
        app:layout_constraintBottom_toTopOf="@+id/agentLicenseNum"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/agentLastName"
        android:layout_width="356dp"
        android:layout_height="81dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/agent_name_last"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/agentEmail"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/action2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="123dp"
        android:onClick="collectBrokerageInfo"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agentFirstName" />

    <EditText
        android:id="@+id/agentLicenseNum"
        android:layout_width="354dp"
        android:layout_height="72dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:hint="@string/agent_license_number"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/action2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/section1Title"
        android:layout_width="212dp"
        android:layout_height="25dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="26dp"
        android:labelFor="@+id/section1Title"
        android:text="@string/gai_section_1_title"
        app:layout_constraintBottom_toTopOf="@+id/agentFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>