<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelationshipToClient">

    <TextView
        android:id="@+id/clientRelationshipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="221dp"
        android:text="@string/agent_related_to_buyer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clientRelationshipYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="46dp"
        android:text="@string/agent_client_relationship_yes"
        app:layout_constraintStart_toStartOf="@+id/clientRelationshipLabel"
        app:layout_constraintTop_toBottomOf="@+id/clientRelationshipLabel" />

    <Button
        android:id="@+id/clientRelationshipNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/agent_client_relationship_no"
        app:layout_constraintStart_toStartOf="@+id/clientRelationshipYes"
        app:layout_constraintTop_toBottomOf="@+id/clientRelationshipYes" />

</androidx.constraintlayout.widget.ConstraintLayout>