<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intermediary">

    <RadioButton
        android:id="@+id/IntermediaryStatusNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="33dp"
        android:onClick="getFees"
        android:text="@string/intermediary_status_no"
        app:layout_constraintStart_toStartOf="@+id/IntermediaryStatusYes"
        app:layout_constraintTop_toBottomOf="@+id/IntermediaryStatusYes" />

    <TextView
        android:id="@+id/intermediaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="251dp"
        android:text="@string/intermediary_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/IntermediaryStatusYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:onClick="getFees"
        android:text="@string/intermediary_status_yes"
        app:layout_constraintStart_toStartOf="@+id/intermediaryTitle"
        app:layout_constraintTop_toBottomOf="@+id/intermediaryTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>